# marmita-demo

./: .coveragerc  .gitignore  README.md  setup.cfg  upgrade-jar.sh
marmita-sdk/: build.gradle.kts  settings.gradle.kts
marmita-sdk/src/main/scala/marmita/sdk/: App.scala  PythonUtils.scala
marmita-sdk/src/test/scala/marmita/sdk/tests/: ApiTests.scala  AppTests.scala
src/marmitasdk/: connector.py  main.py
tests/: test_app.py  test_dataframe.py  test_person.py  test_registry.py  test_seq.py
