[metadata]
name = marmitasdk
version = 1.0.0
description = Marmita Demo for Python

[options]
python_requires = >=3.4, <3.9
package_dir=
  = src
packages = find:
include_package_data = True
install_requires =
  jpype1
  loguru

[options.packages.find]
where = src

[options.package_data]
marmitasdk = jars/*.jar

[options.entry_points]
console_scripts =
  marmita-demo = marmitasdk.main:run

[flake8]
max-line-length = 120
per-file-ignores = __init__.py:F401

[tool:pytest]
addopts = --tb=short

[tox:tox]
skipdist = True
skip_missing_interpreters = True
envlist = py36, py37, py38

[testenv]
usedevelop = True
deps =
  bpython
  flake8
  pytest
  rope
allowlist_externals =
  sh
commands =
  sh {toxinidir}/upgrade-jar.sh
  pytest tests
  flake8 tests src
  marmita-demo

[testenv:package]
commands =
  sh {toxinidir}/upgrade-jar.sh
  python {toxinidir}/setup.py bdist_wheel

[testenv:run]
basepython = python3
skipdist = False
usedevelop = True
deps=
commands =
  sh {toxinidir}/upgrade-jar.sh
  python --version
  marmita-demo
